[gd_scene load_steps=7 format=3 uid="uid://c057snujor6r"]

[ext_resource type="Script" uid="uid://nea3j3cvlwr3" path="res://scenes/ui/leaderboard.gd" id="1_yxfbr"]
[ext_resource type="PackedScene" uid="uid://chqqbu2i76pko" path="res://scenes/ui/leaderboardRow.tscn" id="2_5icvg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yatso"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.101960786, 0.16862746, 0.16862746, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.078431375, 0.13725491, 0.13725491, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxfbr"]
bg_color = Color(0, 0, 0, 0.39215687)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5icvg"]
bg_color = Color(0, 0, 0, 0.78431374)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fl8ms"]
bg_color = Color(0, 0, 0, 0.5882353)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Leaderboard" type="CanvasLayer"]
script = ExtResource("1_yxfbr")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.39215687)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="MainPanel" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yatso")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MainPanel"]
layout_mode = 2

[node name="Header" type="MarginContainer" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainPanel/VBoxContainer/Header"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/MainPanel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
text = "LEADERBOARD"

[node name="Spacer" type="Control" parent="MarginContainer/MainPanel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Subtitle" type="Label" parent="MarginContainer/MainPanel/VBoxContainer/Header/HBoxContainer"]
layout_mode = 2
text = "TOP PLAYERS"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2

[node name="RankLbl" type="Label" parent="MarginContainer/MainPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "RANK"

[node name="PlayerLbl" type="Label" parent="MarginContainer/MainPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
text = "PLAYER"

[node name="TitleLbl" type="Label" parent="MarginContainer/MainPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "TITLE"

[node name="Spacer" type="Control" parent="MarginContainer/MainPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PointsLbl" type="Label" parent="MarginContainer/MainPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "POINTS"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/MainPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LeaderbordRow" parent="MarginContainer/MainPanel/VBoxContainer/ScrollContainer/PlayerList" instance=ExtResource("2_5icvg")]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 114.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_yxfbr")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5icvg")
theme_override_styles/hover = SubResource("StyleBoxFlat_fl8ms")
text = "< Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
